# spec-forge

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .tool-versions  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  justfile  pyproject.toml  uninstall.sh
.claude/: agents  commands  hooks  settings.json  skills
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: GIT.md
spec_forge/: __init__.py  backends.py  cli.py  codescan.py  deploy.py  export_pdf.py  integrations.py  models.py  profiles.py  scaffolder.py  state.py  validators.py
spec_forge/assets/fonts/: README.md
specifications/: README.md
specifications/ai/: AGENTS.md  settings.json
specifications/architecture/: fitness-functions.md  nfr.md  observability.md  plan.md  threat-model.md  traceability-matrix.md
specifications/contracts/: openapi.yaml
specifications/delivery/: tasks.md
specifications/design/: example-feature.design.md
specifications/knowledge/: README.md  example-domain-notes.md
specifications/platform/: env.example  gitattributes  justfile  tool-versions
specifications/product/: glossary.md
specifications/quality/: pre-commit-config.yaml
specifications/roles/: README.md  business-analyst.md  designer.md  developer.md  solution-architect.md
specifications/services/: service-catalog.md
tests/: conftest.py  test_backends.py  test_cli_analyze.py  test_cli_init.py  test_cli_phases.py  test_codescan.py  test_export.py  test_integrations.py  test_scaffolder.py  test_state.py  test_validators.py
(+91 files in other folders)
