[project]
name = "spec-forge"
version = "0.1.0"
description = "Генератор якісних специфікацій для будь-якого проєкту (spec-driven)."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "fpdf2>=2.7",
]

[project.scripts]
spec-forge = "spec_forge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pytest-cov>=5.0",
]

[tool.coverage.run]
omit = ["spec_forge/templates/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spec_forge"]

[tool.ruff]
target-version = "py312"
